--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
   </head>
   <body>
     <load src="./partials/header.html" />
-    <main></main>
+    <main>
+      <load src="./partials/hero.html" />
+    </main>
 
     <!--<load src="./partials/footer.html" />-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
