--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,14 @@
     <load src="./partials/header.html" />
     <main>
       <load src="./partials/hero.html" />
+      <load src="./partials/about-us.html" />
+      <load src="./partials/collection.html" />
+      <load src="./partials/card-content.html" />
+      <load src="./partials/order.html" />
+      <load src="./partials/testimonials.html" />
     </main>
 
-    <!--<load src="./partials/footer.html" />-->
+    <load src="./partials/footer.html" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
