--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <load src="./partials/hero.html" />
       <load src="./partials/about-us.html" />
       <load src="./partials/collection.html" />
-      <load src="./partials/card-content.html" />
+      <!--<load src="./partials/card-content.html" />-->
       <load src="./partials/order.html" />
       <load src="./partials/testimonials.html" />
     </main>
